2007-07-12  George Giolfan  <georgegiolfan@yahoo.com>

	* ItemCollection.cs: Switched to implemented CollectionView.
	* ItemContainerGenerator.cs: Moved from System.Windows.Controls.Primitives.
	* ItemsControl.cs: More work.
	* ItemsPanelTemplate.cs, ItemsPresenter.cs: Added.

2007-07-09  George Giolfan  <georgegiolfan@yahoo.com>

	* ColumnDefinitionCollection.cs, RowDefinitionCollection.cs: Removed unneeded explicit interface implementations.

2007-07-09  George Giolfan  <georgegiolfan@yahoo.com>

	* ColumnDefinitionCollection.cs: Added a TODO.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl trivial things.cs: Switched to implemented Selector.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItem.cs: Fixed previous change.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItem.cs: It uses Selector events now.

2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>

	* ProgessBar.cs: Optimized and made closer to Microsoft implementation.

2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>

	* ProgessBar.cs: Removed useless calls.

2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>

	* ProgessBar.cs: Fixed indicator sizing when Orientation is Vertical.

2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>

	* ProgessBar.cs: Fixed indicator sizing.

2007-07-01  George Giolfan  <georgegiolfan@yahoo.com>

	* Expander.cs: Added.
	
2007-07-01  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs: Some changes that make some tests pass. Stack traces reveal internal classes being used (MS.Internal....). The implementation of ItemsControl-derived classes will most likely require the implementation of ItemsControl and its related classes.

2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs: Fixed previous change.

2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs, TabItem.cs: More work.

2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>
